// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionnaireStepTabs /> renders correctly questionnaire is private 1`] = `
<div>
  <Uncontrolled(Tabs)
    defaultActiveKey={1}
  >
    <Tab
      eventKey={1}
      title="project.types.questionnaire"
    >
      <ForwardRef(Relay(injectIntl(QuestionnairePage)))
        questionnaire={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "privateResult": false,
          }
        }
      />
    </Tab>
    <Tab
      eventKey={2}
      title="results"
    >
      <ForwardRef(Relay(injectIntl(QuestionnaireResults)))
        questionnaire={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "privateResult": false,
          }
        }
      />
    </Tab>
  </Uncontrolled(Tabs)>
</div>
`;

exports[`<QuestionnaireStepTabs /> renders correctly questionnaire is public 1`] = `
<div>
  <ForwardRef(Relay(injectIntl(QuestionnairePage)))
    questionnaire={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "privateResult": true,
      }
    }
  />
</div>
`;

exports[`<QuestionnaireStepTabs /> renders correctly when results are disabled 1`] = `
<div>
  <ForwardRef(Relay(injectIntl(QuestionnairePage)))
    questionnaire={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "privateResult": true,
      }
    }
  />
</div>
`;
